--- a/insta/templates/all-views/base.html
+++ b/insta/templates/all-views/base.html
@@ -8,7 +8,7 @@
   {% if title %}
   <title>Instagram - {{title}}</title>
   {% else %}
-    <title>Welcome instagram </title>
+    <title>Welcome to instagram </title>
   {% endif %}
 
   {% block styles %}
