--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -3,11 +3,11 @@
 {%block content%}
 <div class="container col d-flex justify-content-center" style="padding-top: 100px;">
 <div class="row">
-   <div class="col-md-9">
-       <img class="card-img-top" src="https://files.slack.com/files-pri/T077KKCG6-FP9LYH36X/insta6.png" alt="" style="height:auto;width:100%">
+   <div class="col-md-7">
+       <img class="card-img-top" src="../../static/images/instalanding.png" alt="" style="height:auto;width:90%">
    </div>
-</div>
-   <div class="row">
+
+   <div class="col-md-5">
        <div class="col-md-6 col-lg-6 " style="padding-top: 60px; padding-left: 0px; margin-left: 0px;">
            <div class="card" style="width: 18rem;">
                <div class="card-header">
@@ -28,5 +28,6 @@
            </div>
        </div>
    </div>
+</div>
 </div>
 {%endblock%}
