--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -33,6 +33,9 @@
                           <form class="navbar-form" role="search" action="{% url 'search' %}" style="margin-left: 250px;"> 
                               <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search" name="user">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                  </div>
                               </div>
                           </form>
                     </div>
@@ -54,7 +57,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'new-post' %}">
+                        <a href="{% url 'new_post' %}">
                             <i class="glyphicon glyphicon-camera" style="font-size:26px;padding-top: 14%;"></i>
                         </a>
                     </li>
