--- a/insta/templates/new_post.html
+++ b/insta/templates/new_post.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="jumbotron">
-  <form  action="{%url 'new-post'%}" method="post" enctype="multipart/form-data" style="padding-left: 6%;padding-right:10%; padding-bottom: 20%">
+  <form  action="{%url 'new_post'%}" method="post" enctype="multipart/form-data" style="padding-left: 6%;padding-right:10%; padding-bottom: 20%">
     {%csrf_token%}
     
     {% bootstrap_form form%}
